--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dva-boot-admin",
-  "version": "2.0.1",
-  "description": "dva-boot-admin",
+  "name": "cabala-client-electron-react",
+  "version": "0.0.1-beta-1",
+  "description": "A cabala client developed by react and electron.",
   "homepage": ".",
   "main": "./src/main.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:LANIF-UI/dva-boot-admin.git"
+    "url": "https://github.com/NarcissusNull/cabala-client.git"
   },
-  "license": "MIT",
+  "license": "GPL-3.0",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
