--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-beta-1",
   "description": "A cabala client developed by react and electron.",
   "homepage": ".",
-  "main": "./src/main.js",
+  "main": "main.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/NarcissusNull/cabala-client.git"
@@ -16,7 +16,7 @@
     "eject": "react-scripts eject",
     "gh-pages": "react-app-rewired build && gh-pages -d build",
     "estart": "electron .",
-    "package": "electron-packager ./ cabala-client-electron-react --out ./release --overwrite --icon=./app/img/icon/icon.ico"
+    "package": "electron-packager ./ cabala-client-electron-react -platform=win32 --arch=ia32 --out ./release --overwrite --icon=./app/img/icon/icon.ico"
   },
   "dependencies": {
     "@antv/data-set": "^0.8.9",
